# wasm-blockifier

./: .gitignore  Cargo.toml  README.md
crates/blockifier_utils/: Cargo.toml
crates/blockifier_utils/src/: client.rs  test.rs  utils.rs
crates/client-blockifier/: Cargo.toml
crates/client-blockifier/src/: test.rs  utils.rs
crates/js-lib/: index.d.ts  index.html  package.json  vite.config.ts
crates/js-lib/lib/: main.ts
crates/js-lib/public/world-sierra-contracts/: dojo_examples-move.json  dojo_examples-position.json  manifest.json
crates/js-lib/src/: main.ts  style.css
crates/js-test/: readme.md
crates/js-test/client/src/: main.ts  style.css
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
examples/js-lib/: index.html  readme.md
examples/js-lib/lib/: LocalWorld.ts
examples/js-lib/public/world-sierra-contracts/: dojo_examples-moves.json  dojo_examples-spawn.json
examples/js-lib/src/: main.ts
examples/js-test/client/: index.html  package.json
examples/js-test/contracts/: Scarb.toml
src/: lib.rs
src/blockifier_utils/: client.rs  state.rs  test.rs  utils.rs
tests/: web.rs
