[package]
name = "client-wasm"
version = "0.1.0"
authors = ["Shramee Srivastav <shramee.srivastav@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
lazy_static = "1.4.0"
wasm-bindgen = "0.2.84"

serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = { version = "1.0.96", features = [ "alloc", "raw_value" ], default-features = false }

# The latest commit on the branch no_std-support-7578442 is broken
# Same branch but an older commit
blockifier = { git = "https://github.com/keep-starknet-strange/blockifier", default-features = false, branch = "no_std-support-7578442" }
starknet-core = { version = "0.5.0" }

# For Sierra class struct
starknet_api = { git = "https://github.com/keep-starknet-strange/starknet-api", branch = "no_std-support-dc83f05", default-features = false }

# For compiling to Casm,
# TODO replace keep-starknet-strange/cairo when it's compatible
# Note https://github.com/keep-starknet-strange/cairo/pull/3
cairo-lang-starknet = { git = "https://github.com/keep-starknet-strange/cairo.git", branch = "no_std-support-8bbf530" }
cairo-lang-casm-contract-class = { git = "https://github.com/keep-starknet-strange/cairo.git", branch = "no_std-support-8bbf530" }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.dev]
opt-level = 1
incremental = true